# multigauge-web

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EditorApi.cmake  LICENSE  README.md  RuntimeAPI.cmake  build.ps1  build.sh
examples/basic/: index.html
examples/editor/: actions.js  canvas.js  hierarchy.js  index.html  main.js  properties.js  state.js
js/: apiHelpers.js  canvasManager.js  pageRenderer.js  previewApi.js  runtime.js
js/api/: editorApi.js  previewApi.js
js/editor/: editorApi.js
src/: AppEditorExports.cpp  EditorApi.cpp  EditorBindings.h  main.cpp
src/platform/: FileSystemEmscripten.cpp  FileSystemEmscripten.h  GraphicsContextCanvas.cpp  GraphicsContextCanvas.h  LoggerWebConsole.cpp  LoggerWebConsole.h  TimeWeb.h
wasm/: multigauge.js
web/bindings/: ApiBindings.cpp  ApiBindings.h  EditorApi.cpp  RuntimeApi.cpp
web/src/platform/: FileSystemEmscripten.h  GraphicsContextCanvas.cpp  GraphicsContextCanvas.h  LoggerWebConsole.cpp  TimeWeb.cpp  TimeWeb.h
web/wasm/: multigauge.js  multigauge.wasm.map
